# xhs-mcp

./: .gitignore  README.md  pyproject.toml
src/xhs_mcp/: app.py  logger.py
src/xhs_mcp/auth/: auth_manager.py  cookie_manager.py
src/xhs_mcp/tools/: rednote_tools.py
